--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <html>
   <head>
-    <title>Kylan Main Page</title>
+    <title>VARGAS_250 MAIN PAGE</title>
   </head>
   <body>
     <h3>Main Page is underbuild</h3>
